打包成单个so库

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".FFmpegBaseActivity" />
-        <activity android:name=".DecodeActivity"></activity>
+        <activity android:name=".TransformActivity"></activity>
     </application>
 
 </manifest>
