--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -2,65 +2,58 @@
 cmake_minimum_required(VERSION 3.4.1)
 add_library( native-lib
              SHARED
-             ${CMAKE_SOURCE_DIR}/src/main/cpp/native-lib.cpp )
+             src/main/cpp/native-lib.cpp )
 find_library( log-lib
               log )
 target_link_libraries( native-lib
                        ${log-lib} )
-
-#外面引入的库文件需要自定义的头文件路径
-set(distribution_DIR ${CMAKE_SOURCE_DIR}/../../../libs/${ANDROID_ABI})
-include_directories(libs/include)
-#增加ffmpeg的so文件动态共享库，${ANDROID_ABI}表示so文件的ABI类型的路径
+#添加ffmpeg已编译好的so库依赖
 add_library( #库名称
-             avcodec
+             avcodec-57
              #SHARED表示是共享库，一般.so文件，还有STATIC，一般.a文件
              SHARED
              #IMPORTED表示引用的不是生成的
              IMPORTED )
 #对于已经编译好的so文件需要引入
 set_target_properties( #库名称
-                       avcodec
+                       avcodec-57
                        PROPERTIES IMPORTED_LOCATION
                        #库的路径
-                       ${distribution_DIR}/libavcodec-57.so )
-add_library( avfilter
+                       ../../../../libs/armeabi-v7a/libavcodec-57.so )
+add_library( avfilter-6
              SHARED
              IMPORTED )
-set_target_properties( avfilter
+set_target_properties( avfilter-6
                        PROPERTIES IMPORTED_LOCATION
-                       ${distribution_DIR}/libavfilter-6.so )
-add_library( avformat
+                       ../../../../libs/armeabi-v7a/libavfilter-6.so )
+add_library( avformat-57
              SHARED
              IMPORTED )
-set_target_properties( avformat
+set_target_properties( avformat-57
                        PROPERTIES IMPORTED_LOCATION
-                       ${distribution_DIR}/libavformat-57.so )
-add_library( avutil
+                       ../../../../libs/armeabi-v7a/libavformat-57.so )
+add_library( avutil-55
              SHARED
              IMPORTED )
-set_target_properties( avutil
+set_target_properties( avutil-55
                        PROPERTIES IMPORTED_LOCATION
-                       ${distribution_DIR}/libavutil-55.so )
-add_library( swresample
+                       ../../../../libs/armeabi-v7a/libavutil-55.so )
+add_library( swresample-2
              SHARED
              IMPORTED )
-set_target_properties( swresample
+set_target_properties( swresample-2
                        PROPERTIES IMPORTED_LOCATION
-                       ${distribution_DIR}/libswresample-2.so )
-add_library( swscale
+                       ../../../../libs/armeabi-v7a/libswresample-2.so )
+add_library( swscale-4
              SHARED
              IMPORTED )
-set_target_properties( swscale
+set_target_properties( swscale-4
                        PROPERTIES IMPORTED_LOCATION
-                       ${distribution_DIR}/libswscale-4.so )
+                       ../../../../libs/armeabi-v7a/libswscale-4.so )
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
+#外面引入的库文件需要头文件
+include_directories(libs/include)
+set(distribution_DIR ${CMAKE_SOURCE_DIR}/../../../../libs)
 #把需要的so文件链接起来
-target_link_libraries( native-lib
-                       swresample
-                       avcodec
-                       avfilter
-                       swscale
-                       avutil
-                       avformat
+target_link_libraries( native-lib swresample-2 avcodec-57 avfilter-6 swscale-4 avutil-55 avformat-57
                        ${log-lib} )
