1、系统原生播放器

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':ffmpegcmd', ':ffmpegonelib', ':baselib', ':ffmpegdecoder'
+include ':app', ':ffmpegcmd', ':ffmpegonelib', ':baselib', ':ffmpegdecoder', ':ffmpegplayer'
